--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
     .policy h3{margin-top:18px;margin-bottom:8px}
     .policy p, .policy li{color:var(--text);font-size:15px}
     .policy pre{white-space:pre-wrap;background:transparent;padding:8px;border-radius:8px}
-    /* 🔹 Изменение: отключаем нумерацию у списков */
     .policy ol {
       list-style: none;
       counter-reset: none;
@@ -98,7 +97,7 @@
     a.btn{display:inline-block;padding:10px 14px;border-radius:10px;background:var(--primary);color:white;text-decoration:none;font-weight:600;box-shadow:0 8px 24px rgba(55,178,173,0.12)}
     @media (max-width:520px){body{padding:18px} .logo{width:48px;height:48px;font-size:16px}}
 
-    /* Новое: переключатель языков */
+    /* Переключатель языков */
     .lang-switch {
       display: flex;
       gap: 8px;
@@ -132,7 +131,6 @@
         </div>
       </div>
       <div class="controls">
-        <!-- Переключатель языков -->
         <div class="lang-switch">
           <a href="#" data-lang="kk" class="lang-link">Қазақша</a>
           <span>/</span>
@@ -148,10 +146,154 @@
     </header>
     <main class="card" role="main">
       <section class="policy" aria-labelledby="policyTitle">
-        <div class="hero">
+        <div class="hero"></div>
+
+        <!-- Казахская версия -->
+        <div class="lang-content" data-lang="kk" style="display:none;">
+          <h3>🏢 B2B-МАРКЕТПЛЕЙС «EASYSAUDA» ҚҰПИЯЛЫЛЫҚ САЯСАТЫ</h3>
+          <p><small>2025.11.10 күнгі редакция</small></p>
+          <ol>
+            <li>
+              <strong>1. Жалпы ережелер</strong>
+              <ol>
+                <li>1.1. Осы Құпиялылық саясаты (бұдан әрі — «Саясат») «EasySauda» сервисінің (бұдан әрі — «Сервис») пайдаланушыларының, соның ішінде Дистрибьюторларға арналған веб-платформаның және Сауда нүктелеріне арналған мобильді қосымшаның дербес деректерін жинау, сақтау, өңдеу және беру тәртібін айқындайды.</li>
+                <li>1.2. Дербес деректер операторы: «Sauda Technologies» ЖШС, БСН/ЖСН: 251040031022, Заңды мекенжайы: Қазақстан, Астана қаласы, Есіл ауданы, Әлихан Бөкейхан көшесі, 11 үй, пошта индексі 010000. Байланыс e-mail: sauda_tech@outlook.com</li>
+                <li>1.3. Осы Саясат Қазақстан Республикасының «Дербес деректер және оларды қорғау туралы» Заңының, сондай-ақ мобильді қосымшаларды App Store және Google Play-де жариялау кезінде дербес деректерді өңдеуге қойылатын халықаралық талаптарға сәйкес әзірленді.</li>
+                <li>1.4. Сервисті пайдалану арқылы Пайдаланушы осы Саясаттың шарттарымен келісетінін білдіреді. Келісім белсенді әрекет арқылы беріледі — тіркелу немесе Сервиске бірінші рет кіру кезінде «Мен келісемін» батырмасын басу немесе Саясаттың мәтінімен танысқаннан кейін Сервисті пайдалануды жалғастыру. Келісім нақты, ақпараттандырылған және саналы болып табылады, ол есептік жазбаның бар болу мерзіміне және оны қайтарып алғанға дейін күшінде болады.
+                  <br>Осы Құпиялылық саясатының толық мәтіні Пайдаланушыға тіркелгенге дейін және Сервис интерфейсінде кез келген уақытта қолжетімді. Саясатта нақты көрсетілген:
+                  <ul>
+                    <li>Дербес деректердің тізбесі (3.1–3.3-т.);</li>
+                    <li>Өңдеу мақсаттары (3.1–3.3-т.);</li>
+                    <li>Келісімнің қолданылу мерзімі (есептік жазба жойылғанға немесе кері қайтарылғанға дейін);</li>
+                    <li>Үшінші тұлғаларға беру туралы ақпарат (5.1–5.3-т.);</li>
+                    <li>Трансшекаралық беру (8.1-т., бар болса);</li>
+                    <li>Келісімді қайтарып алу құқығы (7.1-т.).</li>
+                  </ul>
+                  Саясатпен танысу және оны қабылдау фактісі жүйенің логтарында күні, уақыты және IP-мекенжайы көрсетіліп тіркеледі. Келісімді кез келген уақытта sauda_tech@outlook.com электрондық поштасы арқылы кері қайтарып алуға болады.
+                </li>
+              </ol>
+            </li>
+            <li>
+              <strong>2. Сервис архитектурасы және пайдаланушылардың рөлдері</strong>
+              <ol>
+                <li>2.1. EasySauda сервисі Дистрибьюторлар мен Сауда нүктелері (Сатып алушылар) арасындағы өзара әрекеттесуге арналған B2B-маркетплейсі болып табылады.</li>
+                <li>Дистрибьютор (веб-нұсқа) — өтінімдерді қабылдау және өңдеуді, клиенттік базаны жүргізуді, каталогты, бағаларды, акцияларды және аналитиканы басқаруды жүзеге асырады.</li>
+                <li>Сауда нүктесі (мобильді қосымша) — тапсырыстарды орналастырады, каталогтар мен бағаларды қарайды, өзгерістерді келіседі және тапсырыс мәртебелері туралы хабарламалар алады.</li>
+                <li>Платформа Әкімшісі (Оператор) — модерацияны, қолмен тексеруді (верификация), техникалық қолдауды және өтініштерді өңдеуді қамтамасыз етеді.</li>
+              </ol>
+            </li>
+            <li>
+              <strong>3. Дербес деректерді жинау және өңдеу</strong>
+              <ol>
+                <li>
+                  <em>3.1. Дистрибьюторлардың деректері (веб-платформа)</em>
+                  <p>Жинақталатын деректер:</p>
+                  <ul>
+                    <li>Компанияның атауы, БСН/ЖСН, банктік реквизиттер, заңды мекенжайы;</li>
+                    <li>Тауарларға арналған сертификаттар (файлдар түрінде);</li>
+                    <li>Сайт (бар болса);</li>
+                    <li>Өкілдің Т.А.Ә., лауазымы, корпоративтік e-mail, жұмыс телефоны.</li>
+                  </ul>
+                  <p>Өңдеу мақсаттары:</p>
+                  <ul>
+                    <li>Заңды тұлғамен шартты тексеру (верификациялау) және жасасу;</li>
+                    <li>Есептік жазбаны әкімшілендіру;</li>
+                    <li>Тараптар арасындағы кері байланыс пен коммуникацияны қамтамасыз ету;</li>
+                    <li>ҚР заңнамасының бухгалтерлік және салықтық есепке алу бөлігіндегі талаптарын сақтау.</li>
+                  </ul>
+                </li>
+                <li>
+                  <em>3.2. Сауда нүктелерінің деректері (мобильді қосымша)</em>
+                  <p>Жинақталатын деректер:</p>
+                  <ul>
+                    <li>Дүкеннің атауы, заңды және нақты мекенжайлары;</li>
+                    <li>Аймақ, қала, байланыс телефоны және корпоративтік пошта;</li>
+                    <li>Өкілдің Т.А.Ә., дүкеннің жұмыс уақыты;</li>
+                    <li>Есептік жазба деректері: логин (e-mail), телефон, хэштелген пароль.</li>
+                  </ul>
+                  <p>Өңдеу мақсаттары:</p>
+                  <ul>
+                    <li>Сауда нүктесін Әкімшінің сәйкестендіруі (идентификациялау) және тексеруі (верификациялауы);</li>
+                    <li>Дистрибьюторлардың тапсырыстарды орындауын қамтамасыз ету;</li>
+                    <li>Тапсырыстар бойынша жеткізуді және байланысты ұйымдастыру;</li>
+                    <li>Пайдаланушылардың сұрау салуларына қолдау көрсету және әрекет ету.</li>
+                  </ul>
+                </li>
+                <li>
+                  <em>3.3. Автоматты түрде жинақталатын деректер (веб және мобильді нұсқа)</em>
+                  <p>Жинақталатын деректер:</p>
+                  <ul>
+                    <li>IP-мекенжайы, құрылғының түрі мен моделі, операциялық жүйенің нұсқасы;</li>
+                    <li>Құрылғының бірегей ID-і, белсенділік туралы деректер (тапсырыс тарихы, қаралымдар, басулар);</li>
+                    <li>Қателік логтары және қосымша жұмысының техникалық параметрлері.</li>
+                  </ul>
+                  <p>Өңдеу мақсаттары:</p>
+                  <ul>
+                    <li>Сервистің тұрақты жұмысын қолдау;</li>
+                    <li>Қауіпсіздікті арттыру және рұқсатсыз кіруден қорғау;</li>
+                    <li>Аналитика жүргізу және пайдаланушы тәжірибесін жақсарту;</li>
+                    <li>Тапсырыстардың маңызды мәртебелері туралы хабарламалар жіберу.</li>
+                  </ul>
+                </li>
+              </ol>
+            </li>
+            <li>
+              <strong>4. Мобильді қосымша рұқсаттарын пайдалану</strong>
+              <p>Қазіргі уақытта қосымша рұқсаттарды пайдаланбайды.</p>
+            </li>
+            <li>
+              <strong>5. Дербес деректерді үшінші тұлғаларға беру</strong>
+              <ol>
+                <li>5.1. Сервис дербес деректерді тек Сервис функцияларын орындау үшін қажетті көлемде ғана береді: Сауда нүктесінің деректері тапсырысты ресімдеу кезінде таңдалған Дистрибьюторға беріледі; Дистрибьютордың деректері (атауы, байланыстары) Сауда нүктесіне байланыс және келісу үшін қолжетімді болады. Беру сәтінен бастап 10 (он) жұмыс күні ішінде Оператор Пайдаланушыға беру фактісі туралы хабарлайды (e-mail арқылы немесе Сервис интерфейсінде).</li>
+                <li>5.2. Платформа дербес деректерді үшінші тұлғаларға коммерциялық мақсатта сатпайды және бермейді.</li>
+                <li>5.3. Төлем шлюзімен (эквайрингпен) интеграциялау кезінде деректер тек транзакцияны жүргізу үшін қажетті көлемде ғана беріледі: сома, тапсырыс идентификаторы және пайдаланушы идентификаторы. Платформа банктік реквизиттерді немесе төлем карталарының деректерін жинамайды және сақтамайды. Төлем деректерін өңдеу және қорғау үшін жауапкершілік Әріптес Банкке жүктеледі.</li>
+              </ol>
+            </li>
+            <li>
+              <strong>6. Деректерді сақтау және қорғау</strong>
+              <ol>
+                <li>6.1. Барлық дербес деректер Қазақстан Республикасының аумағында немесе дербес деректерді барабар қорғауды қамтамасыз ететін елдерде орналасқан қорғалған серверлерде сақталады.</li>
+                <li>6.2. Оператор деректерді жоғалтудан, рұқсатсыз қол жеткізуден, өзгертуден немесе жоюдан қорғау үшін техникалық және ұйымдастырушылық шаралар қабылдайды. Дербес деректерді беру, оның ішінде мобильді қосымша жұмыс істеген кезде, қорғалған протоколдар бойынша жүзеге асырылады.</li>
+                <li>6.3. Дербес деректерге қол жеткізу құпиялылықты сақтауға міндетті уәкілетті қызметкерлерге ғана беріледі.</li>
+              </ol>
+            </li>
+            <li>
+              <strong>7. Дербес деректер субъектісінің құқықтары</strong>
+              <ol>
+                <li>7.1. Пайдаланушының құқығы бар: Оператор өңдейтін өзінің дербес деректері туралы ақпарат алуға; Деректер толық емес, ескірген немесе заңсыз алынған болса, оларды нақтылауды, бұғаттауды немесе жоюды талап етуге; Дербес деректерді өңдеуге берілген келісімді қайтарып алуға; Мобильді қосымша арқылы немесе sauda_tech@outlook.com электрондық поштасына сұрау салу арқылы есептік жазбаны жоюға бастама жасауға. Сұрау салулар түскен сәттен бастап 10 (он) жұмыс күні ішінде өңделеді. Нәтижесі туралы хабарлама Пайдаланушыға e-mail немесе Сервис интерфейсі арқылы жіберіледі.</li>
+                <li>7.2. Есептік жазба жойылғаннан кейін Пайдаланушының деректері, Қазақстан Республикасының заңнамасына сәйкес сақталуға жататын мәліметтерді қоспағанда (мысалы, қаржылық операциялар және жүкқұжаттар туралы деректер), жойылады.</li>
+              </ol>
+            </li>
+            <li>
+              <strong>8. Деректерді халықаралық беру</strong>
+              <p>8.1. Қазақстан Республикасының шегінен тыс жерде орналасқан бұлттық сервистер мен аналитика жүйелері пайдаланылған жағдайда, дербес деректерді беру тек қазақстандық заңнамаға эквивалентті қорғау қағидаттары сақталған жағдайда ғана жүзеге асырылады.</p>
+            </li>
+            <li>
+              <strong>9. Деректерді сақтау мерзімі</strong>
+              <p>9.1. Дербес деректер есептік жазбаның қолданылу мерзімі ішінде және Қазақстан Республикасының заңнамасында өзгеше көзделмесе (мысалы, бухгалтерлік, салықтық есепке алу немесе сот актілерін орындау мақсаттары үшін) оны жойғаннан кейін 3 (үш) жылдан аспайтын мерзімде сақталады.</p>
+            </li>
+            <li>
+              <strong>10. Саясатты жаңарту және өзгерту</strong>
+              <ol>
+                <li>10.1. Оператор осы Саясатқа өзгерістер енгізу құқығын өзіне қалдырады. Өзекті нұсқасы мобильді қосымшада әрқашан қолжетімді.</li>
+                <li>10.2. Саясаттың жаңартылған нұсқасы жарияланғаннан кейін Сервисті пайдалануды жалғастыру оның шарттарымен келісім білдіруді білдіреді.</li>
+              </ol>
+            </li>
+            <li>
+              <strong>11. Оператордың деректемелері</strong>
+              <pre>Платформа Операторы: «Sauda Technologies» ЖШС
+БСН / ЖСН: 251040031022
+Заңды мекенжайы: Қазақстан, Астана қаласы, Есіл ауданы, Әлихан Бөкейхан көшесі, 11 үй, пошта индексі 010000
+Электрондық пошта: sauda_tech@outlook.com</pre>
+            </li>
+            <li>
+              <strong>12. Дербес деректер мәселелері бойынша өтініштер үшін байланыс</strong>
+              <p>Дербес деректерді өңдеу, өзгерту немесе жоюға байланысты барлық сұрақтар <a href="mailto:sauda_tech@outlook.com">sauda_tech@outlook.com</a> электрондық мекенжайына жіберіледі.</p>
+            </li>
+          </ol>
         </div>
 
-        <!-- Русская версия (по умолчанию) -->
+        <!-- Русская версия -->
         <div class="lang-content" data-lang="ru">
           <h3>ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ B2B-МАРКЕТПЛЕЙСА «EASYSAUDA»</h3>
           <ol>
@@ -399,7 +541,6 @@ E-mail: sauda_tech@outlook.com</pre>
 
   <script>
     (function(){
-      // Тема
       const body = document.body;
       const storedTheme = localStorage.getItem('sauda-theme');
       const isDark = storedTheme === 'dark';
@@ -448,7 +589,6 @@ E-mail: sauda_tech@outlook.com</pre>
         });
       });
 
-      // Инициализация языка
       switchLanguage(currentLang);
     })();
   </script>
