--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
 
         <!-- Казахская версия -->
         <div class="lang-content" data-lang="kk" style="display:none;">
-          <h3>🏢 B2B-МАРКЕТПЛЕЙС «EASYSAUDA» ҚҰПИЯЛЫЛЫҚ САЯСАТЫ</h3>
-          <p><small>2025.11.10 күнгі редакция</small></p>
+          <h3> B2B-МАРКЕТПЛЕЙС «EASYSAUDA» ҚҰПИЯЛЫЛЫҚ САЯСАТЫ</h3>
           <ol>
             <li>
               <strong>1. Жалпы ережелер</strong>
@@ -239,7 +238,7 @@
             </li>
             <li>
               <strong>4. Мобильді қосымша рұқсаттарын пайдалану</strong>
-              <p>Қазіргі уақытта қосымша рұқсаттарды пайдаланбайды.</p>
+              <p>4.1. Қазіргі уақытта қосымша рұқсаттарды пайдаланбайды.</p>
             </li>
             <li>
               <strong>5. Дербес деректерді үшінші тұлғаларға беру</strong>
@@ -397,7 +396,7 @@
               <strong>11. Реквизиты оператора</strong>
               <pre>Оператор Платформы: ТОО «Sauda Technologies"
 БИН / ИИН: 251040031022
-Юридический адрес: Казахстан, город Астана, район Есиль, улица Әлихан Бөкейхан, дом 11, почтовый индекс 010000
+Юридический адрес: Казахстан, город Астана, район Есиль, улица Алихана Бокейхана, дом 11, почтовый индекс 010000
 Электронная почта: sauda_tech@outlook.com </pre>
             </li>
             <li>
