--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
               <strong>1. Жалпы ережелер</strong>
               <ol>
                 <li>1.1. Осы Құпиялылық саясаты (бұдан әрі — «Саясат») «EasySauda» сервисінің (бұдан әрі — «Сервис») пайдаланушыларының, соның ішінде Дистрибьюторларға арналған веб-платформаның және Сауда нүктелеріне арналған мобильді қосымшаның дербес деректерін жинау, сақтау, өңдеу және беру тәртібін айқындайды.</li>
-                <li>1.2. Дербес деректер операторы: «Sauda Technologies» ЖШС, БСН/ЖСН: 251040031022, Заңды мекенжайы: Қазақстан, Астана қаласы, Есіл ауданы, Әлихан Бөкейхан көшесі, 11 үй, пошта индексі 010000. Байланыс e-mail: sauda_tech@outlook.com</li>
+                <li>1.2. Дербес деректер операторы: 
+                  <pre>«Sauda Technologies» ЖШС, 
+                  БСН/ЖСН: 251040031022, 
+                  Заңды мекенжайы: Қазақстан, Астана қаласы, Есіл ауданы, Әлихан Бөкейхан көшесі, 11 үй, пошта индексі 010000. 
+                    Байланыс e-mail: sauda_tech@outlook.com</pre></li>
                 <li>1.3. Осы Саясат Қазақстан Республикасының «Дербес деректер және оларды қорғау туралы» Заңының, сондай-ақ мобильді қосымшаларды App Store және Google Play-де жариялау кезінде дербес деректерді өңдеуге қойылатын халықаралық талаптарға сәйкес әзірленді.</li>
                 <li>1.4. Сервисті пайдалану арқылы Пайдаланушы осы Саясаттың шарттарымен келісетінін білдіреді. Келісім белсенді әрекет арқылы беріледі — тіркелу немесе Сервиске бірінші рет кіру кезінде «Мен келісемін» батырмасын басу немесе Саясаттың мәтінімен танысқаннан кейін Сервисті пайдалануды жалғастыру. Келісім нақты, ақпараттандырылған және саналы болып табылады, ол есептік жазбаның бар болу мерзіміне және оны қайтарып алғанға дейін күшінде болады.
                   <br>Осы Құпиялылық саясатының толық мәтіні Пайдаланушыға тіркелгенге дейін және Сервис интерфейсінде кез келген уақытта қолжетімді. Саясатта нақты көрсетілген:
