--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
     footer.site{margin-top:18px;padding-top:12px;color:var(--muted);text-align:center;font-size:13px}
     a.btn{display:inline-block;padding:10px 14px;border-radius:10px;background:var(--primary);color:white;text-decoration:none;font-weight:600;box-shadow:0 8px 24px rgba(55,178,173,0.12)}
     @media (max-width:520px){body{padding:18px} .logo{width:48px;height:48px;font-size:16px}}
-
     /* Переключатель языков */
     .lang-switch {
       display: flex;
@@ -156,10 +155,10 @@
               <strong>1. Жалпы ережелер</strong>
               <ol>
                 <li>1.1. Осы Құпиялылық саясаты (бұдан әрі — «Саясат») «EasySauda» сервисінің (бұдан әрі — «Сервис») пайдаланушыларының, соның ішінде Дистрибьюторларға арналған веб-платформаның және Сауда нүктелеріне арналған мобильді қосымшаның дербес деректерін жинау, сақтау, өңдеу және беру тәртібін айқындайды.</li>
-                <li>1.2. Дербес деректер операторы: 
-                  <pre>«Sauda Technologies» ЖШС, 
-БСН/ЖСН: 251040031022, 
-Заңды мекенжайы: Қазақстан, Астана қаласы, Есіл ауданы, Әлихан Бөкейхан көшесі, 11 үй, пошта индексі 010000. 
+                <li>1.2. Дербес деректер операторы:
+                  <pre>«Sauda Technologies» ЖШС,
+БСН/ЖСН: 251040031022,
+Заңды мекенжайы: Қазақстан, Астана қаласы, Есіл ауданы, Әлихан Бөкейхан көшесі, 11 үй, пошта индексі 010000.
 Байланыс e-mail: sauda_tech@outlook.com</pre>
                 </li>
                 <li>1.3. Осы Саясат Қазақстан Республикасының «Дербес деректер және оларды қорғау туралы» Заңының, сондай-ақ мобильді қосымшаларды App Store және Google Play-де жариялау кезінде дербес деректерді өңдеуге қойылатын халықаралық талаптарға сәйкес әзірленді.</li>
@@ -182,7 +181,7 @@
               <ol>
                 <li>2.1. EasySauda сервисі Дистрибьюторлар мен Сауда нүктелері (Сатып алушылар) арасындағы өзара әрекеттесуге арналған B2B-маркетплейсі болып табылады.</li>
                 <li>Дистрибьютор (веб-нұсқа) — өтінімдерді қабылдау және өңдеуді, клиенттік базаны жүргізуді, каталогты, бағаларды, акцияларды және аналитиканы басқаруды жүзеге асырады.</li>
-                <li>Сауда нүктесі (мобильді қосымша) — тапсырыстарды орналастырады, каталогтар мен бағаларды қарайды, өзгерістерді келіседі және тапсырыс мәртебелері туралы хабарламалар алады.</li>
+                <li>Сауда нүктесі (мобильді қосымша) — тапсырыстарды орнала2ыстырады, каталогтар мен бағаларды қарайды, өзгерістерді келіседі және тапсырыс мәртебелері туралы хабарламалар алады.</li>
                 <li>Платформа Әкімшісі (Оператор) — модерацияны, қолмен тексеруді (верификация), техникалық қолдауды және өтініштерді өңдеуді қамтамасыз етеді.</li>
               </ol>
             </li>
@@ -243,7 +242,7 @@
             </li>
             <li>
               <strong>4. Мобильді қосымша рұқсаттарын пайдалану</strong>
-              <p>4.1. Қазіргі уақытта қосымша рұқсаттарды пайдаланбайды.</p>
+              <p>4.1. Қазіргі уақытта қолданба рұқсаттарды пайдаланбайды.</p>
             </li>
             <li>
               <strong>5. Дербес деректерді үшінші тұлғаларға беру</strong>
@@ -274,7 +273,7 @@
             </li>
             <li>
               <strong>9. Деректерді сақтау мерзімі</strong>
-              <p>9.1. Дербес деректер есептік жазбаның қолданылу мерзімі ішінде және Қазақстан Республикасының заңнамасында өзгеше көзделмесе (мысалы, бухгалтерлік, салықтық есепке алу немесе сот актілерін орындау мақсаттары үшін) оны жойғаннан кейін 3 (үш) жылдан аспайтын мерзімде сақталады.</p>
+              <p>9.1. Дербес деректер есептік жазбаның қолданылу мерзімі ішінде және Қазақстан Республикасының заңнамасында өзгеше көзделмесе (мысалы, бухгалтерлік, салықтық есепке алу немесе сот актілерін орындау мақсаттары үшін) оны жойғаннан кейін 3 (үш) жылдан аспайтын мерзімде са asideталады.</p>
             </li>
             <li>
               <strong>10. Саясатты жаңарту және өзгерту</strong>
@@ -350,7 +349,7 @@
                 </li>
                 <li>
                   <em>3.3. Автоматически собираемые данные (веб и мобильная версия)</em>
-                  <p>Собираемые данные: IP-адрес, тип и модель устройства, версия операционной системы; Уникальный ID устройства, данные об активности (история заказов, просмотры, клики); Логи ошибок и технические параметры работы приложения.</p>
+                  <p>Собираемые данные: IP-адрес, тип и модель устройства, версия операционной системы; Уникальный ID устройства заявления об активности (история заказов, просмотры, клики); Логи ошибок и технические параметры работы приложения.</p>
                   <p>Цели обработки: Поддержание стабильной работы Сервиса; Повышение безопасности и защита от несанкционированного доступа; Проведение аналитики и улучшение пользовательского опыта; Отправка уведомлений о критических статусах заказов.</p>
                 </li>
               </ol>
@@ -381,7 +380,8 @@
                 <li>7.1. Пользователь имеет право: получать информацию о своих персональных данных, обрабатываемых Оператором; требовать уточнения, блокирования или уничтожения данных, если они являются неполными, устаревшими или незаконно полученными; отзывать согласие на обработку персональных данных; инициировать удаление аккаунта через мобильное приложение или по запросу на e-mail sauda_tech@outlook.com. Запросы обрабатываются в течение 10 (десяти) рабочих дней с момента получения. Уведомление о результате направляется Пользователю по e-mail или в интерфейсе Сервиса.</li>
                 <li>7.2. После удаления аккаунта данные Пользователя уничтожаются, за исключением сведений, подлежащих хранению в соответствии с законодательством Республики Казахстан (например, данные о финансовых операциях и накладных).</li>
               </ol>
-            </li>
+            </li}$.
+
             <li>
               <strong>8. Международная передача данных</strong>
               <p>8.1. В случае использования облачных сервисов и систем аналитики, расположенных за пределами Республики Казахстан, передача персональных данных осуществляется только при условии соблюдения принципов защиты, эквивалентных казахстанскому законодательству.</p>
@@ -524,9 +524,24 @@ E-mail: sauda_tech@outlook.com</pre>
             </li>
           </ol>
         </div>
-
       </section>
-      <aside class="aside" aria-label="Контакты и действия">
+
+      <!-- Блок "Контакты" — 3 версии -->
+      <aside class="aside lang-aside" data-lang="kk" style="display:none;" aria-label="Байланыстар">
+        <div>
+          <div class="card-title">Байланыстар</div>
+          <div class="contact-list">
+            <div><strong>Эл. пошта:</strong> <a href="mailto:sauda_tech@outlook.com">sauda_tech@outlook.com</a></div>
+            <div><strong>Қала:</strong> Астана, Қазақстан</div>
+            <div style="margin-top:10px"><strong>Заңды мекенжай:</strong><br>Есіл ауданы, Әлихан Бөкейхан көшесі, 11 үй, 010000</div>
+          </div>
+          <div style="margin-top:16px">
+            <a class="btn" href="mailto:sauda_tech@outlook.com">Бізге жазыңыз</a>
+          </div>
+        </div>
+      </aside>
+
+      <aside class="aside lang-aside" data-lang="ru">
         <div>
           <div class="card-title">Контакты</div>
           <div class="contact-list">
@@ -539,8 +554,22 @@ E-mail: sauda_tech@outlook.com</pre>
           </div>
         </div>
       </aside>
+
+      <aside class="aside lang-aside" data-lang="en" style="display:none;" aria-label="Contacts">
+        <div>
+          <div class="card-title">Contacts</div>
+          <div class="contact-list">
+            <div><strong>Email:</strong> <a href="mailto:sauda_tech@outlook.com">sauda_tech@outlook.com</a></div>
+            <div><strong>City:</strong> Astana, Kazakhstan</div>
+            <div style="margin-top:10px"><strong>Legal address:</strong><br>Yesil District, Elikhan Bokeikhan Street 11, 010000</div>
+          </div>
+          <div style="margin-top:16px">
+            <a class="btn" href="mailto:sauda_tech@outlook.com">Contact us</a>
+          </div>
+        </div>
+      </aside>
     </main>
-    <footer class="site">&copy; 2025 ТОО "Sauda Technologies" — B2B рынок в надежных руках</footer>
+    <footer class="site">© 2025 ТОО "Sauda Technologies" — B2B рынок в надежных руках</footer>
   </div>
 
   <script>
@@ -568,14 +597,22 @@ E-mail: sauda_tech@outlook.com</pre>
       // Язык
       const langLinks = document.querySelectorAll('.lang-link');
       const langContents = document.querySelectorAll('.lang-content');
+      const langAsides = document.querySelectorAll('.lang-aside');
       const currentLang = localStorage.getItem('sauda-lang') || 'ru';
       body.setAttribute('data-lang', currentLang);
 
       function switchLanguage(lang) {
+        // Основной контент
         langContents.forEach(el => el.style.display = 'none');
-        const target = document.querySelector(`.lang-content[data-lang="${lang}"]`);
-        if (target) target.style.display = 'block';
+        const targetContent = document.querySelector(`.lang-content[data-lang="${lang}"]`);
+        if (targetContent) targetContent.style.display = 'block';
 
+        // Боковая панель "Контакты"
+        langAsides.forEach(el => el.style.display = 'none');
+        const targetAside = document.querySelector(`.lang-aside[data-lang="${lang}"]`);
+        if (targetAside) targetAside.style.display = 'block';
+
+        // Активная ссылка
         langLinks.forEach(link => {
           link.classList.remove('active');
           if (link.dataset.lang === lang) link.classList.add('active');
