--- a/index.html
+++ b/index.html
@@ -338,18 +338,39 @@
               <ol>
                 <li>
                   <em>3.1. Данные Дистрибьюторов (веб-платформа)</em>
-                  <p>Собираемые данные: Наименование компании, БИН/ИИН, банковские реквизиты, юридический адрес; Сертификаты на товары (в виде файлов); Сайт (если имеется); ФИО представителя, должность, корпоративный e-mail, рабочий телефон.</p>
-                  <p>Цели обработки: Верификация и заключение договора с юридическим лицом; Администрирование аккаунта; Обеспечение обратной связи и коммуникации между сторонами; Соблюдение требований законодательства РК в части бухгалтерского и налогового учета.</p>
+                  <p>Собираемые данные: 
+                    <li>Наименование компании, БИН/ИИН, банковские реквизиты, юридический адрес;</li> 
+                      <li>Сертификаты на товары (в виде файлов); Сайт (если имеется);</li>  
+                        <li>ФИО представителя, должность, корпоративный e-mail, рабочий телефон.</li> </p>
+                  <p>Цели обработки: 
+                    <li>Верификация и заключение договора с юридическим лицом;</li> 
+                      <li> Администрирование аккаунта; Обеспечение обратной связи и коммуникации между сторонами;</li> 
+                        <li> Соблюдение требований законодательства РК в части бухгалтерского и налогового учета.</li></p>
                 </li>
                 <li>
                   <em>3.2. Данные Торговых точек (мобильное приложение)</em>
-                  <p>Собираемые данные: Наименование магазина, юридическое и фактическое адреса; Регион, город, контактный телефон и корпоративная почта; ФИО представителя, время работы магазина; Данные аккаунта: логин (e-mail), телефон, хэшированный пароль.</p>
-                  <p>Цели обработки: Идентификация и верификация Торговой точки Администратором; Обеспечение исполнения заказов Дистрибьюторами; Организация доставки и связи по заказам; Поддержка и реагирование на запросы пользователей.</p>
+                  <p>Собираемые данные: 
+                     <li>Наименование магазина, юридическое и фактическое адреса;</li>
+                     <li>Регион, город, контактный телефон и корпоративная почта;</li>
+                     <li>ФИО представителя, время работы магазина;</li> 
+                     <li>Данные аккаунта: логин (e-mail), телефон, хэшированный пароль.</li></p>
+                  <p>Цели обработки: 
+                    <li>Идентификация и верификация Торговой точки Администратором;</li> 
+                    <li>Обеспечение исполнения заказов Дистрибьюторами;</li> 
+                      <li> Организация доставки и связи по заказам;</li> 
+                        <li>Поддержка и реагирование на запросы пользователей.</li></p>
                 </li>
                 <li>
                   <em>3.3. Автоматически собираемые данные (веб и мобильная версия)</em>
-                  <p>Собираемые данные: IP-адрес, тип и модель устройства, версия операционной системы; Уникальный ID устройства заявления об активности (история заказов, просмотры, клики); Логи ошибок и технические параметры работы приложения.</p>
-                  <p>Цели обработки: Поддержание стабильной работы Сервиса; Повышение безопасности и защита от несанкционированного доступа; Проведение аналитики и улучшение пользовательского опыта; Отправка уведомлений о критических статусах заказов.</p>
+                  <p>Собираемые данные: 
+                    <li>IP-адрес, тип и модель устройства, версия операционной системы</li>; 
+                      <li> Уникальный ID устройства заявления об активности (история заказов, просмотры, клики)</li>; 
+                        <li> Логи ошибок и технические параметры работы приложения.</li></p>
+                  <p>Цели обработки: 
+                    <li>Поддержание стабильной работы Сервиса;</li>
+                      <li>Повышение безопасности и защита от несанкционированного доступа;</li> 
+                        <li>Проведение аналитики и улучшение пользовательского опыта;</li> 
+                          <li>Отправка уведомлений о критических статусах заказов.</li></p>
                 </li>
               </ol>
             </li>
@@ -453,18 +474,38 @@ Contact e-mail: sauda_tech@outlook.com</pre>
               <ol>
                 <li>
                   <em>3.1. Distributor Data (Web Platform)</em>
-                  <p>Collected Data: Company name, BIN/IIN, banking details, legal address; Product certificates (as uploaded files); Website (if available); Full name of representative, position, corporate e-mail, and work phone number.</p>
-                  <p>Purposes of Processing: Verification and conclusion of contracts with legal entities; Account administration; Ensuring communication between parties; Compliance with the laws of the Republic of Kazakhstan regarding accounting and taxation.</p>
+                  <p>Collected Data: 
+                    <li>Company name, BIN/IIN, banking details, legal address; </li>
+                      <li>Product certificates (as uploaded files); Website (if available); </li>
+                        <li> Full name of representative, position, corporate e-mail, and work phone number.</li></p>
+                  <p>Purposes of Processing: 
+                    <li> Verification and conclusion of contracts with legal entities; </li>
+                      <li>Account administration; Ensuring communication between parties;</li> 
+                        <li>Compliance with the laws of the Republic of Kazakhstan regarding accounting and taxation.</li></p>
                 </li>
                 <li>
                   <em>3.2. Retail Outlet Data (Mobile Application)</em>
-                  <p>Collected Data: Store name, legal and physical addresses; Region, city, contact phone, and corporate e-mail; Representative’s full name, store working hours; Account details: login (e-mail), phone number, hashed password.</p>
-                  <p>Purposes of Processing: Identification and verification of the Retail Outlet by the Administrator; Fulfillment of orders by Distributors; Organization of delivery and communication regarding orders; Support and response to user requests.</p>
+                  <p>Collected Data: 
+                    <li>Store name, legal and physical addresses; </li>
+                      <li> Region, city, contact phone, and corporate e-mail; </li>
+                        <li> Representative’s full name, store working hours;</li> 
+                          <li> Account details: login (e-mail), phone number, hashed password.</li></p>
+                  <p>Purposes of Processing: 
+                    <li> Identification and verification of the Retail Outlet by the Administrator; </li>
+                      <li> Fulfillment of orders by Distributors; Organization of delivery and communication regarding orders; </li>
+                        <li> Support and response to user requests.</li></p>
                 </li>
                 <li>
                   <em>3.3. Automatically Collected Data (Web and Mobile Versions)</em>
-                  <p>Collected Data: IP address, device type and model, operating system version; Unique device ID, activity data (order history, views, clicks); Error logs and technical performance parameters.</p>
-                  <p>Purposes of Processing: Maintaining stable Service operation; Enhancing security and preventing unauthorized access; Conducting analytics and improving user experience; Sending notifications about critical order statuses.</p>
+                  <p>Collected Data: 
+                    <li> IP address, device type and model, operating system version; </li>
+                      <li> Unique device ID, activity data (order history, views, clicks); </li>
+                        <li> Error logs and technical performance parameters.</li></p>
+                  <p>Purposes of Processing: 
+                    <li> Maintaining stable Service operation; </li>
+                      <li> Enhancing security and preventing unauthorized access; </li>
+                        <li> Conducting analytics and improving user experience; </li>
+                          <li> Sending notifications about critical order statuses.</li></p>
                 </li>
               </ol>
             </li>
