--- a/index.html
+++ b/index.html
@@ -338,39 +338,46 @@
               <ol>
                 <li>
                   <em>3.1. Данные Дистрибьюторов (веб-платформа)</em>
-                  <p>Собираемые данные: 
+                  <p>Собираемые данные: </p>
+                  <ul>
                     <li>Наименование компании, БИН/ИИН, банковские реквизиты, юридический адрес;</li> 
                       <li>Сертификаты на товары (в виде файлов); Сайт (если имеется);</li>  
-                        <li>ФИО представителя, должность, корпоративный e-mail, рабочий телефон.</li> </p>
-                  <p>Цели обработки: 
+                        <li>ФИО представителя, должность, корпоративный e-mail, рабочий телефон.</li> 
+                    </ul>
+                  <p>Цели обработки: </p>
+                   <ul>
                     <li>Верификация и заключение договора с юридическим лицом;</li> 
                       <li> Администрирование аккаунта; Обеспечение обратной связи и коммуникации между сторонами;</li> 
-                        <li> Соблюдение требований законодательства РК в части бухгалтерского и налогового учета.</li></p>
+                        <li> Соблюдение требований законодательства РК в части бухгалтерского и налогового учета.</li> </ul>
                 </li>
                 <li>
                   <em>3.2. Данные Торговых точек (мобильное приложение)</em>
-                  <p>Собираемые данные: 
+                  <p>Собираемые данные: </p>
+                   <ul>
                      <li>Наименование магазина, юридическое и фактическое адреса;</li>
                      <li>Регион, город, контактный телефон и корпоративная почта;</li>
                      <li>ФИО представителя, время работы магазина;</li> 
-                     <li>Данные аккаунта: логин (e-mail), телефон, хэшированный пароль.</li></p>
-                  <p>Цели обработки: 
+                     <li>Данные аккаунта: логин (e-mail), телефон, хэшированный пароль.</li>
+                     </ul>
+                  <p>Цели обработки: </p>
                     <li>Идентификация и верификация Торговой точки Администратором;</li> 
                     <li>Обеспечение исполнения заказов Дистрибьюторами;</li> 
                       <li> Организация доставки и связи по заказам;</li> 
-                        <li>Поддержка и реагирование на запросы пользователей.</li></p>
+                        <li>Поддержка и реагирование на запросы пользователей.</li></ul>
                 </li>
                 <li>
                   <em>3.3. Автоматически собираемые данные (веб и мобильная версия)</em>
-                  <p>Собираемые данные: 
-                    <li>IP-адрес, тип и модель устройства, версия операционной системы</li>; 
-                      <li> Уникальный ID устройства заявления об активности (история заказов, просмотры, клики)</li>; 
-                        <li> Логи ошибок и технические параметры работы приложения.</li></p>
-                  <p>Цели обработки: 
+                  <p>Собираемые данные: </p>
+                   <ul>
+                    <li>IP-адрес, тип и модель устройства, версия операционной системы;</li>
+                      <li> Уникальный ID устройства заявления об активности (история заказов, просмотры, клики);</li>;
+                        <li> Логи ошибок и технические параметры работы приложения.</li></ul>
+                  <p>Цели обработки: </p>
+                           <ul>
                     <li>Поддержание стабильной работы Сервиса;</li>
                       <li>Повышение безопасности и защита от несанкционированного доступа;</li> 
                         <li>Проведение аналитики и улучшение пользовательского опыта;</li> 
-                          <li>Отправка уведомлений о критических статусах заказов.</li></p>
+                          <li>Отправка уведомлений о критических статусах заказов.</li> </ul>
                 </li>
               </ol>
             </li>
@@ -474,38 +481,44 @@ Contact e-mail: sauda_tech@outlook.com</pre>
               <ol>
                 <li>
                   <em>3.1. Distributor Data (Web Platform)</em>
-                  <p>Collected Data: 
+                  <p>Collected Data: </p>
+                   <ul>
                     <li>Company name, BIN/IIN, banking details, legal address; </li>
                       <li>Product certificates (as uploaded files); Website (if available); </li>
-                        <li> Full name of representative, position, corporate e-mail, and work phone number.</li></p>
-                  <p>Purposes of Processing: 
+                        <li> Full name of representative, position, corporate e-mail, and work phone number.</li> </ul>
+                  <p>Purposes of Processing:</p> 
+                   <ul>
                     <li> Verification and conclusion of contracts with legal entities; </li>
                       <li>Account administration; Ensuring communication between parties;</li> 
-                        <li>Compliance with the laws of the Republic of Kazakhstan regarding accounting and taxation.</li></p>
+                        <li>Compliance with the laws of the Republic of Kazakhstan regarding accounting and taxation.</li> </ul>
                 </li>
                 <li>
                   <em>3.2. Retail Outlet Data (Mobile Application)</em>
-                  <p>Collected Data: 
+                  <p>Collected Data: </p>
+                   <ul>
                     <li>Store name, legal and physical addresses; </li>
                       <li> Region, city, contact phone, and corporate e-mail; </li>
                         <li> Representative’s full name, store working hours;</li> 
-                          <li> Account details: login (e-mail), phone number, hashed password.</li></p>
-                  <p>Purposes of Processing: 
+                          <li> Account details: login (e-mail), phone number, hashed password.</li></ul>
+                  <p>Purposes of Processing: </p>
+                   <ul>
                     <li> Identification and verification of the Retail Outlet by the Administrator; </li>
                       <li> Fulfillment of orders by Distributors; Organization of delivery and communication regarding orders; </li>
-                        <li> Support and response to user requests.</li></p>
+                        <li> Support and response to user requests.</li></ul>
                 </li>
                 <li>
                   <em>3.3. Automatically Collected Data (Web and Mobile Versions)</em>
-                  <p>Collected Data: 
+                  <p>Collected Data: </p>
+                   <ul>
                     <li> IP address, device type and model, operating system version; </li>
                       <li> Unique device ID, activity data (order history, views, clicks); </li>
-                        <li> Error logs and technical performance parameters.</li></p>
-                  <p>Purposes of Processing: 
+                        <li> Error logs and technical performance parameters.</li></ul>
+                  <p>Purposes of Processing: </p>
+                   <ul>
                     <li> Maintaining stable Service operation; </li>
                       <li> Enhancing security and preventing unauthorized access; </li>
                         <li> Conducting analytics and improving user experience; </li>
-                          <li> Sending notifications about critical order statuses.</li></p>
+                          <li> Sending notifications about critical order statuses.</li> </ul>
                 </li>
               </ol>
             </li>
