--- a/index.html
+++ b/index.html
@@ -360,20 +360,21 @@
                      <li>Данные аккаунта: логин (e-mail), телефон, хэшированный пароль.</li>
                      </ul>
                   <p>Цели обработки: </p>
+                   <ul>
                     <li>Идентификация и верификация Торговой точки Администратором;</li> 
                     <li>Обеспечение исполнения заказов Дистрибьюторами;</li> 
-                      <li> Организация доставки и связи по заказам;</li> 
-                        <li>Поддержка и реагирование на запросы пользователей.</li></ul>
+                    <li> Организация доставки и связи по заказам;</li> 
+                    <li>Поддержка и реагирование на запросы пользователей.</li></ul>
                 </li>
                 <li>
                   <em>3.3. Автоматически собираемые данные (веб и мобильная версия)</em>
                   <p>Собираемые данные: </p>
                    <ul>
                     <li>IP-адрес, тип и модель устройства, версия операционной системы;</li>
-                      <li> Уникальный ID устройства заявления об активности (история заказов, просмотры, клики);</li>;
+                      <li> Уникальный ID устройства заявления об активности (история заказов, просмотры, клики);</li>
                         <li> Логи ошибок и технические параметры работы приложения.</li></ul>
                   <p>Цели обработки: </p>
-                           <ul>
+                    <ul>
                     <li>Поддержание стабильной работы Сервиса;</li>
                       <li>Повышение безопасности и защита от несанкционированного доступа;</li> 
                         <li>Проведение аналитики и улучшение пользовательского опыта;</li> 
